# test-CI

./: pyproject.toml
.github/Nouveau dossier/: covrage.yml
.github/workflows/: flake8.yml  pytest.yml
