[tool.poetry]
name = "test-ci"
version = "0.1.0"
description = ""
authors = ["augustin-marie <a.marie189@laposte.net>"]
readme = "README.md"
packages = [{include = "test_ci"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
